Add basic navigation between activities

--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:title="Activities">
+        <menu>
+            <item
+                android:id="@+id/nav_activity_empty"
+                android:title="Empty" />
+            <item
+                android:id="@+id/nav_activity_navigation_drawer"
+                android:title="Navigation Drawer" />
+        </menu>
+    </item>
+
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
