--- a/app/src/main/res/layout/content_empty.xml
+++ b/app/src/main/res/layout/content_empty.xml
@@ -12,5 +12,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Blank Activity Content" />
+        android:text="Empty Activity Content" />
 </RelativeLayout>
