--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -9,6 +9,9 @@
             <item
                 android:id="@+id/nav_activity_navigation_drawer"
                 android:title="Navigation Drawer" />
+            <item
+                android:id="@+id/nav_activity_blank"
+                android:title="Blank" />
         </menu>
     </item>
 
